[project]
name = "presido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.4.0",
    "flask>=3.1.1",
    "presidio-analyzer[gliner]>=2.2.358",
    "presidio-anonymizer>=2.2.358",
    "ruff>=0.12.1",
    "spacy[gliner,transformers]>=3.8.7",
    "torch>=2.7.1",
    "transformers>=4.37.0",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
]
